--- a/try_1.html
+++ b/try_1.html
@@ -1,118 +1,63 @@
-{% extends "base.html" %}
-
 {% load static %}
-    <title>Edit Tenant & Tenancy</title>
 
-    {% block extra_css %}
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+<title>Login</title>
 
-    <!-- CSS -->
-    <link rel="stylesheet" href="{% static 'properties/css/tenancy_detail.css' %}">
-    {% endblock %}
+{% block extra_css %}
+<!-- CSS -->
+<link rel="stylesheet" href="{% static 'accounts/css/login.css' %}">
+
+<!-- Font Awesome -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"/>
+
+<!-- Google Font -->
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
+{% endblock %}
 
 {% block content %}
-<div class="page-container">
+<div class="login-wrapper">
+    <div class="login-card">
 
-    <div class="form-card">
-
-        <div class="form-header">
-            <h2>
-                <i class="fa-solid fa-user-pen"></i>
-                Edit Tenant & Tenancy
-            </h2>
+        <div class="login-header">
+            <i class="fa-solid fa-right-to-bracket"></i>
+            <h2>Welcome Back</h2>
+            <p>Login to your account</p>
         </div>
 
-        <form>
+        <form method="post">
+            {% csrf_token %}
 
-            <!-- Tenant Info -->
-            <div class="section">
-                <div class="section-title">
+            {% if form.errors %}
+            <div style="color: red;">
+                {{ form.errors }}
+            </div>
+            {% endif %}
+
+            <div class="form-group">
+                <label>Email or Username</label>
+                <div class="input-wrapper">
                     <i class="fa-solid fa-user"></i>
-                    Tenant Information
-                </div>
-
-                <div class="form-grid">
-
-                    <div class="form-group">
-                        <label>Full Name</label>
-                        <div class="input-wrapper">
-                            <i class="fa-solid fa-id-card"></i>
-                            <input type="text" placeholder="Tenant full name">
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <label>Phone</label>
-                        <div class="input-wrapper">
-                            <i class="fa-solid fa-phone"></i>
-                            <input type="text" placeholder="Phone number">
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <label>Email</label>
-                        <div class="input-wrapper">
-                            <i class="fa-solid fa-envelope"></i>
-                            <input type="email" placeholder="Email address">
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <label>National ID</label>
-                        <div class="input-wrapper">
-                            <i class="fa-solid fa-id-badge"></i>
-                            <input type="text" placeholder="National ID">
-                        </div>
-                    </div>
-
+                    {{ form.username }}
                 </div>
             </div>
 
-            <!-- Tenancy Info -->
-            <div class="section">
-                <div class="section-title">
-                    <i class="fa-solid fa-calendar-check"></i>
-                    Tenancy Information
-                </div>
-
-                <div class="form-grid">
-
-                    <div class="form-group">
-                        <label>Start Date</label>
-                        <div class="input-wrapper">
-                            <i class="fa-solid fa-calendar-day"></i>
-                            <input type="date">
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <label>End Date</label>
-                        <div class="input-wrapper">
-                            <i class="fa-solid fa-calendar-xmark"></i>
-                            <input type="date">
-                        </div>
-                    </div>
-
+            <div class="form-group">
+                <label>Password</label>
+                <div class="input-wrapper">
+                    <i class="fa-solid fa-lock"></i>
+                    {{ form.password }}
                 </div>
             </div>
 
-            <!-- Actions -->
-            <div class="form-actions">
-                <button type="button" class="btn btn-cancel">
-                    <i class="fa-solid fa-xmark"></i>
-                    Cancel
-                </button>
-
-                <button type="submit" class="btn btn-save">
-                    <i class="fa-solid fa-floppy-disk"></i>
-                    Save Changes
-                </button>
+            <div class="forgot-password">
+                <a href="#">Forgot password?</a>
             </div>
 
+            <button type="submit" class="login-btn">
+                <i class="fa-solid fa-arrow-right-to-bracket"></i>
+                Login
+            </button>
         </form>
 
     </div>
-
 </div>
 {% endblock %}
