--- a/try_1.html
+++ b/try_1.html
@@ -1,63 +1,7 @@
-{% load static %}
+<h2>Add Caretaker</h2>
 
-<title>Login</title>
-
-{% block extra_css %}
-<!-- CSS -->
-<link rel="stylesheet" href="{% static 'accounts/css/login.css' %}">
-
-<!-- Font Awesome -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"/>
-
-<!-- Google Font -->
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
-{% endblock %}
-
-{% block content %}
-<div class="login-wrapper">
-    <div class="login-card">
-
-        <div class="login-header">
-            <i class="fa-solid fa-right-to-bracket"></i>
-            <h2>Welcome Back</h2>
-            <p>Login to your account</p>
-        </div>
-
-        <form method="post">
-            {% csrf_token %}
-
-            {% if form.errors %}
-            <div style="color: red;">
-                {{ form.errors }}
-            </div>
-            {% endif %}
-
-            <div class="form-group">
-                <label>Email or Username</label>
-                <div class="input-wrapper">
-                    <i class="fa-solid fa-user"></i>
-                    {{ form.username }}
-                </div>
-            </div>
-
-            <div class="form-group">
-                <label>Password</label>
-                <div class="input-wrapper">
-                    <i class="fa-solid fa-lock"></i>
-                    {{ form.password }}
-                </div>
-            </div>
-
-            <div class="forgot-password">
-                <a href="#">Forgot password?</a>
-            </div>
-
-            <button type="submit" class="login-btn">
-                <i class="fa-solid fa-arrow-right-to-bracket"></i>
-                Login
-            </button>
-        </form>
-
-    </div>
-</div>
-{% endblock %}
+<form method="post">
+  {% csrf_token %}
+  {{ form.as_p }}
+  <button type="submit">Create Caretaker</button>
+</form>
