--- a/try_1.html
+++ b/try_1.html
@@ -1,34 +1,33 @@
-{% extends "base.html" %}
+{% extends 'base.html' %}
 
-{% load static %}
-
+<!-- About Content -->
 {% block content %}
-<div>
-    <h2>My profile</h2>
-    <form method="post">
+<header class="bg-dark py-5">
+  <div class="container px-4 px-lg-5 my-5">
+    <div class="text-center text-white">
+      <h1 class="display-4 fw-bolder">Update Password</h1>
+      <p class="lead fw-normal text-white-50 mb-0">Update User Password...</p>
+    </div>
+  </div>
+</header>
+
+<div class="container">
+  <div class="row">
+    <div class="col-md-6 offset-md-3">
+      <br /><br />
+      <form method="POST" action="{% url 'update_password' %}">
         {% csrf_token %}
-
-        <div>
-            {{ form.username }}
-            {{ form.username.errors }}
-        </div>
-
-        <div>
-            {{ form.first_name }}
-            {{ form.first_name.errors }}
-        </div>
-
-        <div>
-            {{ form.last_name }}
-            {{ form.last_name.errors }}
-        </div>
-
-        <div>
-            {{ form.email }}
-            {{ form.email.errors }}
-        </div>
-
-        <button type="submit">Update Profile</button>
-    </form>
+        <!---->
+        {{ form.as_p }}
+        <br /><br />
+        <button type="submit" class="btn btn-secondary">Update Password</button>
+      </form>
+      <br /><br />
+      <br /><br />
+      <br /><br />
+      <br /><br />
+      <br /><br />
+    </div>
+  </div>
 </div>
 {% endblock %}
